tests/ui/fail/unclosed-tag.rs
fn main() {
    tide_jsx::html! {
      <ul>
        <li>
      </ul>
    };
}
