tests/ui/fail/unclosed-tag.stderr
error: Expected closing tag for: <li>
 --> tests/ui/fail/unclosed-tag.rs:5:9
  |
5 |       </ul>
  |         ^^
